--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 @keyframes slide-in {
     from {
         transform: translateX(30px);
@@ -56,7 +58,6 @@
     }
 }
 
-
 * {
     margin: 0;
     padding: 0;
@@ -68,7 +69,7 @@ html {
 
 body {
     display: flex;
-    font-size: 10px;
+    font-size: 0.7vw;
     min-height: 100%;
     font-family: 'Unbounded', Helvetica, sans-serif;
 }
@@ -90,12 +91,12 @@ body {
     cursor: default;
 
     color: white;
-    background-color: rgba(0, 0, 0, 0.339);
-
+    background: linear-gradient(90deg, rgba(150, 150, 150, 0) 0%, rgba(150,150,150,0.1) 49%, rgba(150,150,150,0.15) 100%);
     top: 90px;
     gap: 10px;
     height: 150px;
     width: 40vw;
+    border-radius: 0px 20px 20px 0px;
 
     font-family: inherit;
     font-size: 6em;
@@ -109,10 +110,12 @@ body {
 #logo {
     opacity: 0;
     position: relative;
-    bottom: 5px;
+    bottom: 6px;
+
+    font-size: 1.5em;
 
     animation: logo-slide 2s ease-in-out;
-    animation-delay: 1.2s;
+    animation-delay: 0.9s;
     animation-fill-mode: forwards;
 }
 
@@ -131,10 +134,12 @@ body {
     font-weight: 300;
 
     padding: 80px 150px 50px 55px;
+
+    overflow: hidden;
 }
 
 .header {
-    line-height: 35px;
+    line-height: 2.45vw;
 }
 
 div>p+p {
@@ -183,18 +188,19 @@ input:hover {
     border-color: rgb(201, 235, 255);
 }
 
-input::placeholder {
-    font-family: inherit;
-    font-size: 8px;
-}
 
 input:focus {
     outline: none;
     border-color: rgb(37, 175, 255);
+    box-shadow: 1px 2px 8px -2px rgba(171,171,171,0.59);
 }
 
 input:invalid {
     border-color: rgb(255, 36, 36);
+}
+
+input:valid {
+    border-color: rgb(37, 175, 255);
 }
 
 button {
