--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @keyframes slide-in {
     from {
         transform: translateX(30px);
@@ -70,8 +68,10 @@ html {
 body {
     display: flex;
     font-size: 0.7vw;
+    height: 100vh;
     min-height: 100%;
     font-family: 'Unbounded', Helvetica, sans-serif;
+
 }
 
 .backdrop-img {
@@ -91,7 +91,7 @@ body {
     cursor: default;
 
     color: white;
-    background: linear-gradient(90deg, rgba(150, 150, 150, 0) 0%, rgba(150,150,150,0.1) 49%, rgba(150,150,150,0.15) 100%);
+    background: linear-gradient(90deg, rgba(150, 150, 150, 0) 0%, rgba(150, 150, 150, 0.1) 49%, rgba(150, 150, 150, 0.15) 100%);
     top: 90px;
     gap: 10px;
     height: 150px;
@@ -135,11 +135,12 @@ body {
 
     padding: 80px 150px 50px 55px;
 
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .header {
-    line-height: 2.45vw;
+    line-height: clamp(23px, 2.45vw, 2.45vw);
+    font-size: clamp(15px, 1.5vw, 1.5vw);
 }
 
 div>p+p {
@@ -147,30 +148,47 @@ div>p+p {
 }
 
 .input-wrapper {
+    display: flex;
+    flex-direction: column;
     background-color: white;
     margin-left: -55px;
     padding: 20px 0px 20px 55px;
     border-radius: 0 40px 40px 0;
     box-shadow: 10px 10px 9px 0px rgba(0, 0, 0, 0.26);
+    min-width: 232px;
 }
 
 legend {
-    margin-bottom: -10px;
+    margin-bottom: 20px;
+    font-size: clamp(15px, 0.8em, 0.8em);
 }
 
-input,
+.inputs {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 150px;
+    row-gap: 20px;
+}
+
+.inputs div {
+    display: flex;
+    flex-direction: column;
+}
+
+
+/*input,
 label {
     display: block;
     margin-right: 80px;
-}
+}*/
 
 label {
     opacity: 0;
     position: relative;
-    margin: 20px 0px 2px 0px;
+    /*margin: 20px 0px 2px 0px;*/
 
     color: rgb(126, 126, 126);
-    font-size: 0.4em;
+    font-size: 7.5px;
     font-weight: 400;
 
     animation: label 2s ease-in-out;
@@ -192,7 +210,7 @@ input:hover {
 input:focus {
     outline: none;
     border-color: rgb(37, 175, 255);
-    box-shadow: 1px 2px 8px -2px rgba(171,171,171,0.59);
+    box-shadow: 1px 2px 8px -2px rgba(171, 171, 171, 0.59);
 }
 
 input:invalid {
@@ -212,7 +230,7 @@ button {
     box-shadow: 10px 10px 9px 0px rgba(0, 0, 0, 0.1);
 
     font-family: inherit;
-    font-size: 0.8em;
+    font-size: clamp(10px, 0.8em, 0.8em);
 
     padding: 10px;
     margin: 25px 0px 25px 0px;
@@ -227,7 +245,7 @@ button:hover {
 }
 
 .existing-user {
-    font-size: 0.8em;
+    font-size: clamp(10px, 0.8em, 0.8em);
 }
 
 a {
@@ -242,4 +260,11 @@ a:visited {
 
 a:hover {
     color: rgb(0, 123, 255);
+}
+
+input+p {
+    font-size: 0.6em;
+    font-family: sans-serif;
+    display: inline-block;
+    margin-bottom: -20px;
 }
