--- a/style.css
+++ b/style.css
@@ -200,6 +200,8 @@ input {
     border: 1px solid rgb(229, 229, 229);
     border-radius: 5px;
     padding: 6px;
+    width: 153px;
+    margin-right: 35px;
 }
 
 input:hover {
@@ -213,11 +215,8 @@ input:focus {
     box-shadow: 1px 2px 8px -2px rgba(171, 171, 171, 0.59);
 }
 
-input:invalid {
-    border-color: rgb(255, 36, 36);
-}
 
-input:valid {
+input:focus:valid {
     border-color: rgb(37, 175, 255);
 }
 
@@ -263,8 +262,8 @@ a:hover {
 }
 
 input+p {
-    font-size: 0.6em;
-    font-family: sans-serif;
+    font-size: 0.3em;
+    font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     margin-bottom: -20px;
 }
